--- a/floweventbus/build.gradle
+++ b/floweventbus/build.gradle
@@ -41,5 +41,5 @@ dependencies {
 
     // Activity 或 Fragment 对协程的支持：lifecycleScope
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02")
-    implementation project(':livedatabus_annotations')
+    implementation project(':floweventbus_annotations')
 }
