--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.squareup:kotlinpoet:1.9.0'
 
     implementation project(':floweventbus')
     implementation project(':floweventbus_annotations')
