--- a/floweventbus_compiler/build.gradle
+++ b/floweventbus_compiler/build.gradle
@@ -10,7 +10,6 @@ java {
 }
 
 dependencies {
-    compileOnly 'com.squareup:kotlinpoet:1.9.0'// 自动生成源码的库
-    compileOnly 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.squareup:kotlinpoet:1.9.0'// 自动生成源码的库
     implementation project(':floweventbus_annotations')
 }
