--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,13 +52,14 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.google.code.gson:gson:2.8.7'
-    implementation 'com.squareup:kotlinpoet:1.9.0'
+
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.5.20")
 
     implementation project(':floweventbus')
     implementation project(':floweventbus_annotations')
     kapt project(':floweventbus_compiler')
 
-//    implementation 'com.github.like5188.FlowEventBus:floweventbus:版本号'
-//    kapt 'com.github.like5188.FlowEventBus:floweventbus_compiler:版本号'
+//    implementation 'com.github.like5188.FlowEventBus:floweventbus:0.0.1'
+//    implementation 'com.github.like5188.FlowEventBus:floweventbus_annotations:0.0.1'
+//    kapt 'com.github.like5188.FlowEventBus:floweventbus_compiler:0.0.1'
 }
