--- a/floweventbus/build.gradle
+++ b/floweventbus/build.gradle
@@ -42,8 +42,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.google.code.gson:gson:2.8.7'
-
     // Activity 或 Fragment 对协程的支持：lifecycleScope
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0")
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.6.10'
 }
