--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation project(':test')
     implementation project(':floweventbus')
     implementation project(':floweventbus_annotations')
     kapt project(':floweventbus_compiler')
