--- a/test1/build.gradle
+++ b/test1/build.gradle
@@ -10,9 +10,10 @@ android {
     defaultConfig {
         minSdk 19
         targetSdk 31
+        versionCode 1
+        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
