--- a/floweventbus_compiler/build.gradle
+++ b/floweventbus_compiler/build.gradle
@@ -9,6 +9,6 @@ java {
 }
 
 dependencies {
-    implementation 'com.squareup:kotlinpoet:1.9.0'// 自动生成源码的库
+    implementation 'com.squareup:javapoet:1.13.0'
     implementation project(':floweventbus_annotations')
 }
