--- a/floweventbus/src/main/AndroidManifest.xml
+++ b/floweventbus/src/main/AndroidManifest.xml
@@ -1,2 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.like.livedatabus" />
+    package="com.like.floweventbus">
+
+    <application>
+        <provider
+            android:name=".FlowEventBusProvider"
+            android:authorities=".FlowEventBusProvider"
+            android:exported="true" />
+    </application>
+</manifest>
