--- a/floweventbus/src/main/AndroidManifest.xml
+++ b/floweventbus/src/main/AndroidManifest.xml
@@ -1,10 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.like.floweventbus">
+<manifest package="com.like.floweventbus">
 
-    <application>
-        <provider
-            android:name=".FlowEventBusProvider"
-            android:authorities=".FlowEventBusProvider"
-            android:exported="false" />
-    </application>
 </manifest>
