--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".test.test1.SecondActivity"
-            android:process=":remote" />
+            android:name=".test.test1.SecondActivity" />
     </application>
 
 </manifest>
